# casa-frame

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  commercial.md  question.md
casa/: __init__.py  _exports.py  _version.py  api.py  audit.py  cache.py  cli.py  config.py  config_loader.py  deliverable.py  events.py  hooks.py  intent.py  interrupt.py  knowledge.py  lifecycle.py  loop.py  memory.py  observability.py  otel.py  policy.py  recovery.py  schema_registry.py  tenant.py
casa/artifact/: __init__.py  _path.py  backend.py  dag.py  store.py
casa/authority/: __init__.py  capability.py  grants.py  resolver.py  store.py  tools.py
casa/contract/: __init__.py  builder.py  models.py  validator.py
casa/extras/: __init__.py
casa/orchestration/: __init__.py  compile.py  composer.py  execute.py  executor.py  facade.py  facade_ops.py  gates.py  models.py  plan_executor.py  plan_recovery.py  (+1 more)
docs/: CASA-MultiAgent-Methodology.md  EXTENDING.md  README.md  cursor-integration-impact-analysis.md
examples/: creative_verifier.py
scripts/: casa_smoke.py  check_module_size.py
tests/: conftest.py  test_artifact.py  test_audit.py  test_authority.py  test_cache.py  test_capability_extensions.py  test_compile_sandbox.py  test_config_loader.py  test_config_validation.py  test_contract_dag_tenant.py  test_contract_version.py  test_deliverable.py  test_e2e.py  test_e2e_scenario.py  test_events.py  test_events_hooks_tenant.py  test_hitl_replan_preset.py  test_hooks.py  test_intent.py  test_interrupt.py  test_knowledge.py  test_lifecycle.py  test_lifecycle_deadlock.py  test_loop.py  test_observability.py  test_orchestrator.py  test_pipeline_composer.py  test_quality_gates.py  test_r2_closure.py  test_recovery.py  test_review_fixes.py  test_s3_pg_backends.py  test_scheduler.py  test_scheduler_atomic_backup.py  test_scheduler_reject.py  test_scope.py  test_tenant.py
(+30 files in other folders)
